--- a/pages/contacts.html
+++ b/pages/contacts.html
@@ -19,6 +19,17 @@
                 </div>
             </div>
         </header>
-        
+        <div id="main-content">
+            <label class="header">My name is Tadeáš Nosek and I'm from the Czech Republic</label><br><br>
+            Youtube: Teddy 0008 (@_teddy0008)<br>
+            Instagram: @_teddy0008<br>
+            Threads: @_teddy0008<br>
+            TikTok: @teddy_0008<br>
+            Discord: teddy0008<br>
+            Discord Server: <a href="https://discord.gg/7YVz3HWZcV">https://discord.gg/7YVz3HWZcV</a><br>
+            Facebook: Teddy Nosek<br>
+            Twitter: Teddy0008 (@_teddy0008)<br>
+            Twitch: Teddy_0008<br>
+        </div>
     </body>
 </html>
