fixed the launchpad pages

--- a/pages/launchpad/avicii-withoutyou-fareohremix.html
+++ b/pages/launchpad/avicii-withoutyou-fareohremix.html
@@ -22,8 +22,11 @@
         
         <div id="main-content">
             <div id="sectionleft">
-                <iframe class="video" width="624" height="351" src="https://www.youtube.com/embed/Y9Cxec_UYxQ?si=C-mTHizF_FmfdMDh&amp;start=18" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                <div class="video-wrapper">
+                    <iframe class="video" src="https://www.youtube.com/embed/Y9Cxec_UYxQ?si=C-mTHizF_FmfdMDh&amp;start=18" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                </div>
             </div>
+                        
             <div id="sectionright">
                 <div class="title">
                     Without You (Fareoh Remix)
